Add a selector in source

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
       <details>
         <summary>Source</summary>
-        <pre class="prescroll"><code>&lt;roving-tabindex selector="button" direction="horziontal"&gt;
+        <pre class="prescroll"><code>&lt;roving-tabindex selector="button, a" direction="horziontal"&gt;
   &lt;ul class="menu" role="toolbar" aria-label="toolbar-example"&gt;
     &lt;li&gt;&lt;button&gt;One&lt;/button&gt;&lt;/li&gt;
     &lt;li&gt;&lt;button&gt;Two&lt;/button&gt;&lt;/li&gt;
