--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         the <code>selector</code> prop to determine which descendant elements should be included.
       </p>
 
-      <pre class="codeblock"><code>&lt;roving-tabindex selector="button" direction="horziontal"&gt;
+      <pre class="codeblock"><code>&lt;roving-tabindex selector="button, a" direction="horziontal"&gt;
   &lt;ul class="menu" role="toolbar" aria-label="toolbar-example"&gt;
     &lt;li&gt;&lt;button&gt;One&lt;/button&gt;&lt;/li&gt;
     &lt;li&gt;&lt;button&gt;Two&lt;/button&gt;&lt;/li&gt;
