--- a/test/test.html
+++ b/test/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>test</title>
@@ -8,7 +8,7 @@
     <test-suite sync data-testid="suite">
       <test-block name="keyboard navigation" sync>
         <script type="sandbox:module">
-          import RovingTabindex from "../rovingtabindex-0.3.0.js";
+          import RovingTabindex from "../rovingtabindex.js";
         </script>
         <roving-tabindex selector="button">
           <button id="one">one</button>
